welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:5: error: not found: value litMesage
		litMesage() match {    //traduction des instructions données par chaques lettres
                ^BDR2:6: error: value avance is not a member of Unit
			case "R" => droite() avance()
                                             ^BDR2:7: error: value avance is not a member of Unit
			case "L" => gauche() avance()
                                             ^BDR2:8: error: value gauche is not a member of Unit
			case "I" => gauche() gauche() avance()
                                             ^BDR2:10: error: value avance is not a member of Unit
			case "B" => avance() avance()
                                             ^BDR2:11: error: value avance is not a member of Unit
			case "C" => avance() avance() avance()
                                             ^BDR2:13: error: value recule is not a member of Unit
			case "Y" => recule() recule()
                                             ^BDR2:14: error: value recule is not a member of Unit
			case "X" => recule() recule() recule()
                                             ^BDR2:15: error: value avance is not a member of Unit
			case "D" => avance() avance() avance() avance()
                                             ^BDR2:16: error: value avance is not a member of Unit
			case "E" => avance() avance() avance() avance() avance()
                                             ^BDR2:17: error: value avance is not a member of Unit
			case "F" => avance() avance() avance() avance() avance() avance()
                                             ^BDR2:18: error: value recule is not a member of Unit
			case "W" => recule() recule() recule() recule()
                                             ^BDR2:19: error: value recule is not a member of Unit
			case "V" => recule() recule() recule() recule() recule()
                                             ^BDR2:20: error: value recule is not a member of Unit
			case "U" => recule() recule() recule() recule() recule() recule()
                                             ^